Newest changes at the top
Format: MM/DD/YYYY HH:MM - comment  

03/10/2016 14:50 - finished second facet
03/10/2016 14:32 - finished first facet
03/10/2016 12:51 - added CodeIgniter starter
03/03/2016 20:10 - added full test data, fixed multiplicity in dtd
03/03/2016 14:56 - modified DTD for courses, added test data to XML
03/03/2016 14:41 - modified DTD for timeslots view, added test data to XML
03/03/2016 14:31 - DTD, setup elements and attribs for days
03/03/2016 13:52 - File and folder setup
03/03/2016 13:41 - Initial setup