@@ -1,6 +1,8 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+
+03/10/2016 15:13 - finished third facet
 03/10/2016 14:50 - finished second facet
 03/10/2016 14:32 - finished first facet
 03/10/2016 12:51 - added CodeIgniter starter
